[package]
name = "react-rs"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]

[dependencies]
toolshed = "0.8.0"

[dev-dependencies.snax]
git = "https://github.com/LPGhatguy/snax.git"
version = "0.1"
[dev-dependencies.snax_macros]
git = "https://github.com/LPGhatguy/snax.git"
version = "0.1"
